# Guitair-transcription-research

./: lineSegment.cpp  out  research.txt
neck-tracker/: README.md  fret-detector-notebook-playground.ipynb  fret-detector-notebook.ipynb  fret-detetor-process.ipynb  fretboard_tracker.py  hough_lines_experiment.py  hough_lines_segment_experiment.py  lineObjects.py  perspective-fret-model-2.ipynb  perspective-fret-model.ipynb  pyproject.toml  test_vid.py
note-detector/: README_SETUP.md  live_note_detector.py  pyproject.toml  requirements.txt
